found paragraph align issue, text-align center in showcase-item. fixed\

--- a/style3.css
+++ b/style3.css
@@ -104,7 +104,7 @@ input {
     background: #999;
 
     display: inline-block;
-    text-align: center;
+    text-align: left;
     color: white;
     font-size: 30px;
 }
